Asset folder setup

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,9 +4,12 @@
 
 <button id="logOut">Sign Out</button>
 
+<script src="/js/profile.js"></script>
+
+<!-- 
 <script type="text/javascript">
     document.getElementById("logOut").onclick=()=>
     {
         location.href="/user/log-out";
     }
-</script>
+</script> -->
