User Authentication using Passport-Local Strategy

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,15 +1,5 @@
+
+<link rel="stylesheet" href="/css/user_profile.css">
 <h1>This is <%=title%> section</h1>
 <p><h3>Name:<%=user.Name%></h3></p>
 <p><h3>Email:<%=user.Email%></h3></p>
-
-<button id="logOut">Sign Out</button>
-
-<script src="/js/profile.js"></script>
-
-<!-- 
-<script type="text/javascript">
-    document.getElementById("logOut").onclick=()=>
-    {
-        location.href="/user/log-out";
-    }
-</script> -->
