--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,7 +1,7 @@
-<form method="POST" action="/user/create-session">
-    <input type="text" name="Name" placeholder="Name" required>
-    <input type="email" name="Email" placeholder="Email" required>
-    <input type="password" name="Password" placeholder="Password" required>
+<form method="POST" action="/users/create">
+    <input type="text" name="name" placeholder="Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="password" name="password" placeholder="Password" required>
     <input type="password" name="ConfirmPassword" placeholder="Confirm Password" required>
     <input type="submit">
 </form> 
