--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,1 +1,36 @@
 <h1>header</h1>
+
+
+<ul>
+    
+        <% const page="/";%>
+        <%if(locals.url!=page){%>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <%}%>
+        
+   
+    <% if (locals.user){ %>
+        <li>
+            <a href="/users/profile">
+                <%= user.Name %>
+            </a>
+        </li>
+        <li>
+            <a href="/users/sign-out">Sign Out</a>
+        </li>
+    <% }else{ %>
+
+        <li>
+            <a href="/users/sign-in">Sign In</a>
+        </li>
+
+        <li>
+            <a href="/users/sign-up">Sign Up</a>
+        </li>
+
+
+    <% } %>
+    
+</ul>
