--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,15 @@
 <html>
-    <title><%=title%></title>
+    <head>
+        <title><%=title%></title>
+        <link rel="stylesheet" href="/css/layout.css">
+        <%- style %>
+    </head>
     <body>
         <%- include('_header'); -%>
+      
         <%- body %>
         <%- include('_footer'); -%>
+
+        <%- script %>
     </body>
-</html>
+</html> 
