--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,6 +1,6 @@
-<form method="POST" action="/user/log-in">
-    <input type="email" name="Email" placeholder="Email" required>
-    <input type="password" name="Password" placeholder="Password" required>
+<form method="POST" action="/users/create-session">
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="password" name="password" placeholder="Password" required>
     <input type="submit">
 
 </form>
