--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,36 @@
 
 <h1>This is <%=title%></h1>
-   
+
+    <%if(locals.user){%>
+    <form action="/posts/posting" method="POST">
+        <input type="text" name="content" placeholder="Post here..." required>
+        <input type="submit" value="Post">
+    </form>
+    <%}%>
+
+    <%for(let post of posts){%>
+        <ul>
+            <li>
+                <p><%=post.content%></p>
+                <small><%=post.user.Name%></small>
+            </li>
+                <%for(let comment of post.comments){%>
+                    <ul>
+                        <li>
+                            <p><%=comment.content%></p>
+                            <small><%=comment.user.Name%></small>
+                        </li>
+                    </ul>
+                    <%}%>
+
+            
+            <%if(locals.user){%>
+            <form action="/comments/commenting" method="POST">
+                <input type="text" name="content" placeholder="Comment here..." required>
+                <input type="hidden" name="postId" value=<%=post.id%>>
+                <input type="submit" value="Comment">
+            </form>
+            <%}%>
+        </ul>
+        <%}%>
+ 
