comments and posts can beleted

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,36 +1,30 @@
-<h1>header</h1>
 
+<link rel="stylesheet" href="/css/header.css">
+ 
 
-<ul>
-    
-        <% const page="/";%>
-        <%if(locals.url!=page){%>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <%}%>
-        
    
     <% if (locals.user){ %>
-        <li>
-            <a href="/users/profile">
+        <div class="topnav">
+        <a href="/"  class="home">Home</a>
+
+            
+            <a href="/users/profile" class="user">
                 <%= user.Name %>
             </a>
-        </li>
-        <li>
-            <a href="/users/sign-out">Sign Out</a>
-        </li>
+      
+            <a href="/users/sign-out" class="signout">Sign Out</a>
+        </div>
+       
     <% }else{ %>
+       <div class="topnav">
+            <a href="/" class="home">Home</a>
 
-        <li>
-            <a href="/users/sign-in">Sign In</a>
-        </li>
-
-        <li>
-            <a href="/users/sign-up">Sign Up</a>
-        </li>
-
-
+     
+            <a href="/users/sign-in" class="signin">Sign In</a>
+       
+            <a href="/users/sign-up" class="signup">Sign Up</a>
+       
+        </div>
     <% } %>
     
-</ul>
+
