--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>This is <%=title%> section</h1>
-<p><h3>Name:<%=user.Name%></h3></p>
-<p><h3>Email:<%=user.Email%></h3></p>
+<p><h3>Name:<%=userInfo.Name%></h3></p>
+<p><h3>Email:<%=userInfo.Email%></h3></p>
