--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,30 +7,21 @@
         <input type="submit" value="Post">
     </form>
     <%}%>
-
+    
     <%for(let post of posts){%>
         <ul>
-            <li>
-                <p><%=post.content%></p>
-                <small><%=post.user.Name%></small>
-            </li>
-                <%for(let comment of post.comments){%>
-                    <ul>
-                        <li>
-                            <p><%=comment.content%></p>
-                            <small><%=comment.user.Name%></small>
-                        </li>
-                    </ul>
-                    <%}%>
-
-            
-            <%if(locals.user){%>
-            <form action="/comments/commenting" method="POST">
-                <input type="text" name="content" placeholder="Comment here..." required>
-                <input type="hidden" name="postId" value=<%=post.id%>>
-                <input type="submit" value="Comment">
-            </form>
-            <%}%>
+            <%- include ./_post -%>
         </ul>
         <%}%>
  
+        <section>
+            <h1>Friends</h1>
+            <%for(let u of users){%>
+                <ul>
+                    <li>
+                        <a href="/users/profile/<%=u.id%>"><%=u.Name%></a>
+                        <button><a href="#" style="text-decoration: none;">Add Friend</a></button>
+                    </li>
+                </ul>    
+            <%}%>
+        </section>
