User can follow any other user

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,8 +7,9 @@
         <div class="topnav">
         <a href="/"  class="home">Home</a>
 
+            <a href="/friends/showfriends">Friends</a>
             
-            <a href="/users/profile" class="user">
+            <a href="/users/profile/<%=user.id%>" class="user">
                 <%= user.Name %>
             </a>
       
