--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,13 +15,21 @@
         <%}%>
  
         <section>
-            <h1>Friends</h1>
+           
+            <% if(locals.user){%>
+            <h1>People</h1>
             <%for(let u of users){%>
                 <ul>
                     <li>
                         <a href="/users/profile/<%=u.id%>"><%=u.Name%></a>
-                        <button><a href="#" style="text-decoration: none;">Add Friend</a></button>
+                        <%if(u.id!=user.id){%>
+                        <button id="friend"><a href="/friends/addfriend/<%=u.id%>" style="text-decoration: none;">Add Friend</a></button>
+                        <%}%>
                     </li>
                 </ul>    
             <%}%>
+            <%}%>
         </section>
+
+
+      
