--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,15 +1,47 @@
 <html>
     <head>
         <title><%=locals.title%></title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         <link rel="stylesheet" href="/css/layout.css">
         <%- style %>
     </head>
     <body>
         <%- include('_header'); -%>
+
+        <!-- Flash messages without noty -->
+        <!-- <% if(locals.flash.success_message && flash.success_message.length>0){%>
+            
+           <h1 style="color: green;"><%=flash.success_message%>!!</h1> 
+            <%}%> -->
       
         <%- body %>
         <%- include('_footer'); -%>
 
         <%- script %>
+
+        <script>
+            <%if(flash.success_message && flash.success_message.length>0){%>
+                    new Noty({
+                        theme:'relax',
+                        text: "<%=flash.success_message%>",
+                        type:'success',
+                        layout:'topCenter',
+                        timeout:1500,
+                        
+                    }).show();
+                <%}%> 
+
+                <%if(flash.error_message && flash.error_message.length>0){%>
+                    new Noty({
+                        theme:'relax',
+                        text: "<%=flash.error_message%>",
+                        type:'error',
+                        layout:'topCenter',
+                        timeout:1500,
+                        
+                    }).show();
+                <%}%> 
+        </script>
     </body>
 </html> 
