--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
 
 <h1>This is <%=title%></h1>
-
+<!-- <img src="/images/1588222880_d-day.jpg"> -->
     <%if(locals.user){%>
+        
     <form action="/posts/posting" method="POST">
         <input type="text" name="content" placeholder="Post here..." required>
         <input type="submit" value="Post">
